envoy-proxy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9090

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: web_cluster
                http_filters:
                  - name: envoy.filters.http.compressor
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                      response_direction_config:
                        common_config:
                          min_content_length: 100
                          enabled:
                            default_value: true
                            runtime_key: response_compressor_enabled
                          content_type:
                            - text/html
                            - application/json
                            - text/css
                            - application/javascript
                        disable_on_etag_header: true
                      request_direction_config:
                        common_config:
                          enabled:
                            default_value: false
                            runtime_key: request_compressor_enabled
                      compressor_library:
                        name: for_response
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                          # 1-9間。Memをたくさん使って高圧縮になる
                          memory_level: 9
                          # メモリ使用量を犠牲にして高圧縮になる
                          window_bits: 12
                          # 最速でやる
                          compression_level: BEST_SPEED
                          # 遅いくせになんか圧縮率も悪い気がする
                          # compression_level: BEST_COMPRESSION
                          compression_strategy: DEFAULT_STRATEGY
                  - name: envoy.filters.http.router

  clusters:
    - name: web_cluster
      type: STRICT_DNS # static
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: web_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      # address: web
                      # port_value: 80
                      # Local
                      address: host.docker.internal
                      port_value: 3000
